# tracking

./: .gitignore  README.md  convert_notebooks_local.sh  exercise.ipynb  prepare_exercise.sh  pyproject.toml  setup.sh  solution.ipynb  solution.py  solution_transformers.py
.github/workflows/: build_notebooks.yaml
01-Transformers/: exercise.ipynb  solution.ipynb  solution.py
02-Tracking/: exercise.ipynb  solution.ipynb  solution.py
03-Bonus-trackmate/: bonus_trackmate.ipynb
