[project]
name = "tracking-exercise"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "motile>=0.3",
    "traccuracy>=0.1.1",
    "geff>=1.1.3",
    "trackastra",
    "motile-tracker[all]>=4.6,<5",
    "funtracks>=1.8,<2",
    "zarr<3",
    "matplotlib",
    "ipywidgets",
    "nbformat",
    "pandas",
    "ipykernel",
    "jupyterlab",
]
